# conduit

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: final-review-fixes.md
crates/conduit-core/: Cargo.toml
crates/conduit-core/src/: config.rs  engine.rs  event.rs  keys.rs  lib.rs
crates/conduit-daemon/: Cargo.toml
crates/conduit-daemon/examples/: classify_check.rs
crates/conduit-daemon/src/: check.rs  classify.rs  devices.rs  hotplug.rs  ipc.rs  lib.rs  main.rs  output.rs  paths.rs  runloop.rs  watch.rs
crates/conduit-daemon/src/focus/: hyprland.rs  kde.rs  mod.rs  x11.rs
crates/conduit-daemon/tests/: integration.rs
crates/conduit-proto/: Cargo.toml
crates/conduit-proto/src/: lib.rs
docs/superpowers/plans/: 2026-07-11-conduit-v1.md  2026-07-12-kde-wayland-mouse-hw.md  2026-07-12-per-device-mappings.md  2026-07-13-experience-phase1-ux-contract.md  2026-07-13-experience-phase2-shell-home.md  2026-07-13-experience-phase3-editor.md  2026-07-13-experience-phase4-perapp.md  2026-07-13-experience-phase5-setup.md  2026-07-13-experience-phase6-polish.md  2026-07-14-onboard-buttons.md  2026-07-20-g502x-neutral-codes.md  2026-07-20-release-pipeline-autostart.md  2026-07-20-runelite-shift-sidebutton.md
docs/superpowers/specs/: 2026-07-11-conduit-design.md  2026-07-12-kde-wayland-mouse-hw-design.md  2026-07-12-per-device-mappings-design.md  (+11 more)
packaging/: 99-conduit.rules  conduit.service
packaging/libratbag/: README.md
scripts/: bump-version.mjs  bump-version.test.mjs  dev.sh  prepare-sidecar.sh
ui/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
ui/src/: App.css  App.test.tsx  App.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: apps.rs  lib.rs  main.rs  ratbag.rs  setup.rs
(+72 files in other folders)
