[package]
name = "conduit-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "conduit-daemon"
path = "src/main.rs"

[dependencies]
conduit-core = { path = "../conduit-core" }
conduit-proto = { path = "../conduit-proto" }
evdev = "0.12"
udev = "0.8"
crossbeam-channel = "0.5"
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
x11rb = "0.13"
nix = { version = "0.29", features = ["fs", "user"] }
regex = "1"
