[package]
name = "conduit-daemon"
version = "0.2.0"
edition = "2021"

[lib]
name = "conduit_daemon"
path = "src/lib.rs"

[[bin]]
name = "conduit-daemon"
path = "src/main.rs"

[dependencies]
conduit-core = { path = "../conduit-core" }
conduit-proto = { path = "../conduit-proto" }
evdev = "0.12"
udev = "0.8"
crossbeam-channel = "0.5"
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
x11rb = "0.13"
nix = { version = "0.29", features = ["fs", "user", "poll"] }
regex = "1"
tempfile = "3"
libc = "0.2"
zbus = "5"

[dev-dependencies]
temp-env = "0.3"
tempfile = "3"
conduit-proto = { path = "../conduit-proto" }
conduit-core = { path = "../conduit-core" }
serde_json = "1"
libc = "0.2"
