[package]
name = "conduit-ui"
version = "0.1.0"
description = "Conduit keyboard remapper — desktop UI"
authors = []
edition = "2021"

[lib]
name = "conduit_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "conduit-ui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
conduit-proto = { path = "../../crates/conduit-proto" }
libc = "0.2"
base64 = "0.22"
